<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/screen"
    tools:context=".Classroom.ClassroomIndividualActivity">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/avatar3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/screen_background"
        android:orientation="vertical">

        <!-- FAMILY NAME & FIRSTNAME -->
        <LinearLayout
            style="@style/classroom_individual_linearlayout_style"
            android:orientation="horizontal">

            <!-- FAMILY NAME -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    style="@style/classroom_individual_textview_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/familyName" />

                <TextView
                    android:id="@+id/studentFamilyName"
                    style="@style/classroom_individual_textview_style"
                    android:text="@string/familyNameHint"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- FIRST NAME -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="100dp"
                android:paddingEnd="50dp">

                <TextView
                    style="@style/classroom_individual_textview_style"
                    android:text="@string/firstName" />

                <TextView
                    android:id="@+id/studentFirstName"
                    style="@style/classroom_individual_textview_style"
                    android:text="@string/firstNameHint"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
        <!-- end  FAMILY NAME & FIRSTNAME -->

        <!-- IDENTIFIER CODE -->
        <LinearLayout
            style="@style/classroom_individual_linearlayout_style"
            android:orientation="vertical">

            <TextView
                style="@style/classroom_individual_textview_style"
                android:text="@string/grade" />

            <TextView
                android:id="@+id/gradeName"
                style="@style/classroom_individual_textview_style"
                android:text="@string/gradeName"
                android:textStyle="bold|normal" />
        </LinearLayout>
        <!-- end IDENTIFIER CODE -->

        <!-- GENDER -->
        <LinearLayout
            style="@style/classroom_individual_linearlayout_style"
            android:orientation="vertical">

            <TextView
                style="@style/classroom_individual_textview_style"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/gender"
                style="@style/classroom_individual_textview_style"
                android:text="@string/male"
                android:textStyle="bold" />

        </LinearLayout>
        <!-- end GENDER -->

        <!-- BIRTHDAY -->
        <LinearLayout
            style="@style/classroom_individual_linearlayout_style"
            android:orientation="vertical">

            <TextView
                style="@style/classroom_individual_textview_style"
                android:text="@string/birthday" />

            <TextView
                android:id="@+id/birthday"
                style="@style/classroom_individual_textview_style"
                android:text="@string/ourBirthday"
                android:textStyle="bold"/>
        </LinearLayout>
        <!-- end BIRTHDAY -->


        <!-- BUTTONS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/individualButtonUpdate"
                style="@style/button_style"
                android:background="@drawable/button_background_5"
                android:gravity="center"
                android:text="@string/student_table_button_edit" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/individualButtonDelete"
                style="@style/button_style"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background_4"
                android:gravity="center"
                android:text="@string/student_table_button_delete" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/individualButtonGoBack"
                android:layout_marginTop="20dp"
                style="@style/button_style"
                android:background="@drawable/button_background_3"
                android:gravity="center"
                android:text="@string/goback" />

        </LinearLayout>
        <!-- end BUTTONS -->
    </LinearLayout>




</LinearLayout>