<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle_6"
        android:orientation="vertical"
        android:padding="30dp"
        tools:ignore="ObsoleteLayoutParam,UselessParent">

        <TextView
            style="@style/settings_account_edit_password_text_style"
            android:text="@string/password"
            android:textSize="40sp" />

        <Space
            style="@style/settings_account_edit_password_text_style" />

        <TextView
            style="@style/settings_account_edit_password_text_style"
            android:text="@string/enter_former_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/settingsAccountPassword"
            style="@style/settings_account_edit_password_text_style"
            android:hint="@string/enter_former_password"
            android:inputType="textPassword" />

        <Space
            style="@style/settings_account_edit_password_text_style" />

        <TextView
            style="@style/settings_account_edit_password_text_style"
            android:text="@string/enter_new_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/settingsAccountNewPassword"
            style="@style/settings_account_edit_password_text_style"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword" />

        <Space
            style="@style/settings_account_edit_password_text_style" />

        <TextView
            style="@style/settings_account_edit_password_text_style"
            android:text="@string/enter_confirmation_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/settingsAccountConfirmationPassword"
            style="@style/settings_account_edit_password_text_style"
            android:hint="@string/enter_confirmation_password"
            android:inputType="textPassword" />

        <Space
            style="@style/settings_account_edit_password_text_style" />

        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/button_background_3"
            android:id="@+id/settingsAccountButtonSavePassword"
            style="@style/button_primary_style"
            android:text="@string/Save" />
    </LinearLayout>
</FrameLayout>