<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff"
    android:paddingBottom="20dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/info_icon"
            android:id="@+id/iconAlert"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="15dp"
            android:textSize="22sp"
            android:id="@+id/msgText"
            android:text="@string/popupContent"
            android:layout_gravity="center"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/button_primary_style"
                android:id="@+id/btnOK"
                android:text="@string/OK"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="30dp"/>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/button_secondary_style"
                android:id="@+id/btnCancel"
                android:text="@string/Cancel"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>