<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <!-- Information -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="85"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/student_code"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="wrap_content"
                android:text="@string/score_student_code"
                android:textColor="#5D5D5D" />

            <TextView
                android:id="@+id/student_full_name"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:text="@string/score_student_name"
                android:textColor="#5D5D5D" />
            <TextView
                android:text="@string/score_student_score"
                android:id="@+id/student_score"
                android:layout_weight="10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#5D5D5D"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/button_edit_score_subject"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/edit"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>

        </LinearLayout>
</LinearLayout>